[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.2",
    "openai==1.12.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "sphinx>=7.2.6",
    "sphinx-autodoc-typehints>=1.25.2",
    "sphinx-rtd-theme>=2.0.0",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.0",
]
